# msmadja-employees-mgmnt-py

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
controllers/: __init__.py  employees_controller.py
core/: __init__.py
core/db/: mongo.py
core/decorators/: __init__.py  authorization_decorator.py
core/errors/: __init__.py  api_exception_handler.py
core/middlewares/: __init__.py  http_correlation_id_middleware.py
dtos/: __init__.py  create_employee_request_dto.py  create_employee_response_dto.py  delete_employee_request_dto.py  delete_employee_response_dto.py  employee_response_dto.py  get_employees_request_dto.py  get_employees_response_dto.py
employees_accessor/: __init__.py  employees_accessor.py  types.py
manage_employees/: __init__.py  manage_employees.py  manage_employees_test.py  types.py
