[project]
name = "msmadja-employees-mgmnt-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.0",
    "mongomock>=4.3.0",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "pytest>=8.4.2",
    "uvicorn>=0.39.0",
]

